# rfc2217-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: codes.rs  command.rs  lib.rs  negotiation.rs  parser.rs  serialport_conversions.rs  server.rs  subnegotiation.rs
tests/: unit_tests.rs
