[package]
name = "rfc2217-rs"
version = "0.1.0"
authors = [
    "Djordje Nedic <nedic.djordje2@gmail.com>"
]
description = "IETF RFC2217 implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/esp-rs/rfc2217-rs"
edition = "2021"

keywords = [
    "rfc2217",
    "telnet",
    "no_std",
    "com_port",
]

[dependencies]
serialport = { version = "4.2.0", optional = true, default-features = false }

[features]
default = ["std"]
std = ["serialport"]
